--- a/scss/componentes/_body.scss
+++ b/scss/componentes/_body.scss
@@ -28,6 +28,14 @@
     background-attachment: fixed;
     background-size: cover;
   }
+/*area*/
+#conteiner__area{
+  background-image: url(./../img/carrusel/fondosok.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 
 body{
     overflow-x: hidden;
