--- a/scss/componentes/_section.scss
+++ b/scss/componentes/_section.scss
@@ -40,3 +40,26 @@ section div.desc {
     margin-bottom: 40px;
  }
  
+ /*areas*/
+ .titarea{
+    margin-top: 50px;
+    margin-bottom: 30px;
+ }
+
+ /*nos*/
+ .titnos{
+    margin-top: 30px;
+    margin-bottom: 20px;
+ }
+
+ /*con*/
+ .titcon{
+    margin-top: 30px;
+    margin-bottom: 40px;
+ }
+
+ /*suc*/
+ .ubisuc{
+    margin-bottom: 40px;
+    margin-top: 20px;
+ }
