--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -53,9 +53,12 @@ main div p{
 
 #conteiner_contwo{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 40px;
+  padding: 15px;
+  margin-top: 30px;
 }
 
 .conteiner{
@@ -79,4 +82,18 @@ div.galeria:hover {
 div.galeria img {
   width: 300px;
   height: 200px;
+}
+
+/*area*/
+.posarea{
+  margin-bottom: 50px;
+  padding: 30px;
+}
+
+/*nos*/
+.posnos{
+  margin-bottom: 50px;
+  padding: 15px;
+  display: flex;
+ 
 }
