--- a/scss/componentes/article.scss
+++ b/scss/componentes/article.scss
@@ -3,10 +3,20 @@ div.inilog {
     justify-content: center;
     padding: 50px;
     margin: 10px;
+    flex-wrap: wrap;
 
 }
 
 div.inilog img {
     width: 300;
     height: 200;
+}
+
+/*suc*/
+.titsuc{
+    margin-top: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+
 }
