--- a/scss/componentes/_body.scss
+++ b/scss/componentes/_body.scss
@@ -8,7 +8,7 @@
 
   
 #conteiner__nos{
-    background-image: url(./../img/carrusel/fodo.jpg);
+    background-image: url(./../img/carrusel/fondocont.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
