--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -110,3 +110,9 @@ div.galeria img {
   font-family: 'Pattaya', sans-serif;
   font-size: nth($size , 3 );
 }
+
+
+/*contacto*/
+.colorbot{
+  background-color: darkolivegreen;
+}
