--- a/scss/componentes/article.scss
+++ b/scss/componentes/article.scss
@@ -20,3 +20,22 @@ div.inilog img {
     justify-content: center;
 
 }
+
+/*nos*/
+.carruselnos img{
+    width: 300px;
+    height: 600px;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-top: 0px;
+   
+}
+
+/*contcarru*/
+.carruselcont img{
+    width: 300px;
+    height: 600px;
+    margin-top: 0px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
