--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -1,7 +1,8 @@
 $tam-one: 20px;
-$tip-one:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+$tip-one:'Mochiy Pop One', sans-serif;
 $sti-one: italic;
 $mod-one: bold;
+$bag: darkolivegreen;
 
 
 $tam-two: 15px;
