--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -113,7 +113,7 @@ div.galeria img {
 .letraini p{
   font-family: 'Pattaya', sans-serif;
   font-size: nth($size , 3 );
-  background-color: darkolivegreen;
+  background-color: $bag;
   border-radius: 15px;
   border: solid;
   
@@ -122,7 +122,7 @@ div.galeria img {
 
 /*contacto*/
 .colorbot{
-  background-color: darkolivegreen;
+  background-color: $bag;
 }
 
 
@@ -132,7 +132,7 @@ div.galeria img {
 .form button {
   padding: 0.5em 1em;
   border: none;
-  background:darkolivegreen;
+  background:$bag;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,8 +143,13 @@ div.galeria img {
 .titform h2{
   font-size: nth($size ,6);
   font-family: 'Mochiy Pop One', sans-serif;
-  background-color: darkolivegreen;
+  background-color: $bag;
   border-radius: 10px;
   border: solid;
   margin-top: 20px;
+}
+
+.letraar p{
+  font-family: 'Mochiy Pop One', sans-serif;
+  
 }
