--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -153,3 +153,7 @@ div.galeria img {
   font-family: 'Mochiy Pop One', sans-serif;
   
 }
+
+.letrasuc{
+  font-family: 'Saira Condensed', sans-serif;
+}
