--- a/scss/componentes/_section.scss
+++ b/scss/componentes/_section.scss
@@ -63,3 +63,7 @@ section div.desc {
     margin-bottom: 40px;
     margin-top: 20px;
  }
+
+ .letratip{
+   font-family: 'Saira Condensed', sans-serif;
+ }
