Cambios tipofrafia, nuevas animaciones

--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ div.galeria img {
 }
 
 .letraini h1 {
-  font-family: "Mochiy Pop One", sans-serif;
+  font-family: "Cinzel", serif;
   font-size: 50px;
   background-color: darkolivegreen;
   border-radius: 10px;
@@ -177,7 +177,7 @@ div.galeria img {
 }
 
 .letraini p {
-  font-family: "Pattaya", sans-serif;
+  font-family: "Archivo Narrow", sans-serif;
   font-size: 30px;
   background-color: darkolivegreen;
   border-radius: 15px;
