--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -3,6 +3,8 @@ $tip-one:'Mochiy Pop One', sans-serif;
 $sti-one: italic;
 $mod-one: bold;
 $bag: darkolivegreen;
+$tip-three:'Archivo Narrow', sans-serif;
+$tip-four: 'Cinzel', serif;
 
 
 $tam-two: 15px;
