--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -5,6 +5,9 @@ $mod-one: bold;
 $bag: darkolivegreen;
 $tip-three:'Archivo Narrow', sans-serif;
 $tip-four: 'Cinzel', serif;
+$tip-five:'Archivo Narrow', sans-serif;
+$tip-six: 'Saira Condensed', sans-serif;
+
 
 
 $tam-two: 15px;
